# xense

./: .gitignore  CMakeLists.txt  README.md  WIFI.md  cspell.json  gen_lmk.sh  generate_proto_venv.sh  generate_wifi_qr.sh  partitions.csv  platformio.ini  pyvenv.cfg  run_protoc.sh  sdkconfig.esp32
certs/: README.md  server_cert.pem  server_csr.pem  server_key.pem
data/: app.js  index.html  style.css
include/: custom_esp_now.h  custom_wifi.h  esp_now_handshake.h  log.h  server.h  xense.h  xense_utils.h
lib/mac_table/: mac_table.c  mac_table.h  mac_table_expiry_manager.c
lib/npb/: npb_0.cpp  npb_transcode.h
lib/xense/: xense.h  xense_data.cpp  xense_gps.cpp  xense_meta.cpp  xense_msg.cpp  xense_state.cpp  xense_wifi.cpp
lib/xense/protoc/: wifi.pb.c  wifi.pb.h  xense.pb.c  xense.pb.h
proto/: nanobp.proto  wifi.proto  xense.proto
proto/xense/: xense.pb.c  xense.pb.h
public/: app.js  index.html  style.css
public/achieve/: index.html
src/: device_state.cpp  esp_now_0.cpp  httpd.cpp  main.cpp  metadata.cpp  nvs.cpp  nvs_wifi.cpp  server.cpp  wifi.cpp  wifi_0.cpp  wifi_1.cpp  ws.cpp  xense_data.cpp  xense_utils.cpp
src/esp-now/: esp_now_add_with_handshake.cpp
tests/: build_test.sh  scan-result.cpp  scan_result.cpp  sta.cpp  station.cpp  test_xense.sh  utils.cpp  utils.h  wifi.cpp  xense_data.cpp  xense_gps.cpp  xense_metadata.cpp  xense_state.cpp
